@@ -12,6 +12,7 @@ USER-VISIBLE CHANGES:
 - Spruced up text. (Phil)
 - Fixed a bug with the item cost display. (Phil)
 - Fixed a bug when running in NetBSD. (emh, reported by Reno Reckling)
+* More items/techs. (emh)
 
 v0.23a (released 2006.03.08):
 
